Заменено содержимое директории ..\mme_software\SCME.dbViewer

--- a/SCME.dbViewer/App.xaml
+++ b/SCME.dbViewer/App.xaml
@@ -4,5 +4,10 @@
              xmlns:local="clr-namespace:SCME.dbViewer"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/ResourceDictionaries/CommonResources.xaml"/>
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
