--- a/SCME.dbViewer/CustomControl/DataGridSqlResult.xaml
+++ b/SCME.dbViewer/CustomControl/DataGridSqlResult.xaml
@@ -3,11 +3,19 @@
           xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
           xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
           xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-          xmlns:local="clr-namespace:SCME.dbViewer.CustomControl"
-          xmlns:dbViewer="clr-namespace:SCME.dbViewer"
+          xmlns:local="clr-namespace:SCME.dbViewer.CustomControl"          
+          xmlns:res="clr-namespace:SCME.dbViewer.Properties"
           mc:Ignorable="d">
 
     <DataGrid.Resources>
+        <local:NrmToBrushMultiConverter x:Key="nrmToBrushMultiConverter"/>
+        <local:ToolTipMultiConverter x:Key="toolTipMultiConverter"/>
+        <local:HeaderVisibilityMultiConverter x:Key="headerVisibilityMultiConverter"/>
+        
+        <ContextMenu x:Key="DataGridCellContextMenu">
+            <MenuItem Header="{x:Static res:Resources.Copy}" Command="Copy"/>
+        </ContextMenu>
+
         <Style x:Key="ArrowStyle" TargetType="Path">
             <Setter Property="StrokeThickness" Value="1"/>
             <Setter Property="Fill" Value="gray"/>
@@ -15,15 +23,15 @@
             <Setter Property="Visibility" Value="Collapsed"/>
         </Style>
 
-        <Style x:Key="ArrowUp" BasedOn="{StaticResource ArrowStyle}" TargetType="Path">
+        <Style x:Key="ArrowUpStyle" BasedOn="{StaticResource ArrowStyle}" TargetType="Path">
             <Setter Property="Data" Value="M10,5 L5,10 H15 L10,5"/>
         </Style>
 
-        <Style x:Key="ArrowDown" BasedOn="{StaticResource ArrowStyle}" TargetType="Path">
+        <Style x:Key="ArrowDownStyle" BasedOn="{StaticResource ArrowStyle}" TargetType="Path">
             <Setter Property="Data" Value="M10,10 L15,5 H5 L10,10"/>
         </Style>
 
-        <Style x:Key="hidingButton" TargetType="Button">
+        <Style x:Key="hidingButtonStyle" TargetType="Button">
             <Setter Property="Content" Value="F"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
             <Setter Property="VerticalAlignment" Value="Top"/>
@@ -44,20 +52,50 @@
             </Style.Triggers>
         </Style>
 
-        <Style TargetType="{x:Type DataGridCell}" x:Key="Body_Content_DataGrid_Centering">
-            <Setter Property="Template">
+        <Style TargetType="{x:Type DataGridCell}" x:Key="ContentDataGridStyle">
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="TextBlock.TextAlignment" Value="Center"/>
+
+            <!--<Setter Property="ToolTip">
                 <Setter.Value>
-                    <ControlTemplate TargetType="{x:Type DataGridCell}">
-                        <Grid Background="{TemplateBinding Background}">
-                            <ContentPresenter VerticalAlignment="Center"/>
-                            <ContentPresenter HorizontalAlignment="Center"/>
-                        </Grid>
-                    </ControlTemplate>
+                    <ToolTip FontSize="20">
+                    </ToolTip>
+                </Setter.Value>
+            </Setter> 
+-->
+            <!--показываем схлопнутые при группировке данные и значения температуры-->
+            <Setter Property="ToolTip">
+                <Setter.Value>
+                    <MultiBinding Converter="{StaticResource toolTipMultiConverter}">
+                        <Binding RelativeSource="{RelativeSource Self}"/>
+                        <Binding Path="Row"/>
+                        <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type local:DataGridSqlResult}}"/>
+                    </MultiBinding>
+                </Setter.Value>
+            </Setter>
+
+            <Setter Property="Background">
+                <Setter.Value>
+                    <MultiBinding Converter="{StaticResource nrmToBrushMultiConverter}">
+                        <Binding RelativeSource="{RelativeSource Self}"/>
+                        <Binding Path="Row"/>
+                        <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type local:DataGridSqlResult}}"/>
+                    </MultiBinding>
                 </Setter.Value>
             </Setter>
         </Style>
 
-        <Style TargetType="DataGridColumnHeader" x:Key="DataGridColumnHeaderCustom">
+        <Style TargetType="DataGridColumnHeader" x:Key="DataGridColumnHeaderCustomStyle">
+            <!--на простом (не мульти) конвертере реализовать не получилось. пробовал передавать в него только DataGrid - получил странный эффект: header с наполовину серый и без столбцов=, столбцы созданные до измеренных условий и параметров не прорисовывались, а с мультиконвертером заработало сразу и как надо-->
+            <Setter Property="Visibility">
+                <Setter.Value>
+                    <MultiBinding Converter="{StaticResource headerVisibilityMultiConverter}">
+                        <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type local:DataGridSqlResult}}" Path="Items.Count"/>
+                        <Binding RelativeSource="{RelativeSource Mode=FindAncestor, AncestorType={x:Type local:DataGridSqlResult}}"/>
+                    </MultiBinding>
+                </Setter.Value>
+            </Setter>
+
             <Setter Property="HorizontalContentAlignment" Value="Center"/>
             <Setter Property="VerticalContentAlignment" Value="Bottom"/>
             <Setter Property="FontSize" Value="18"/>
@@ -65,19 +103,19 @@
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
                         <Grid Margin="{TemplateBinding Padding}">
-                            <Border x:Name="columnHeaderBorder" BorderThickness="1" Padding="3,0,3,0" BorderBrush="Black" Background="#FFE0EBF5">
+                            <Border x:Name="columnHeaderBorder" BorderThickness="1" Padding="3,0,3,0" BorderBrush="Black" Background="{StaticResource CustomBlue1}">
                                 <Grid>
                                     <Grid.RowDefinitions>
                                         <RowDefinition Height="20*"/>
                                         <RowDefinition Height="80*"/>
                                     </Grid.RowDefinitions>
 
-                                    <Path x:Name="PathArrowUp" Style="{StaticResource ArrowUp}" Grid.Row="0" Grid.RowSpan="2"/>
-                                    <Path x:Name="PathArrowDown" Style="{StaticResource ArrowDown}" Grid.Row="0" Grid.RowSpan="2"/>
+                                    <Path x:Name="PathArrowUp" Style="{StaticResource ArrowUpStyle}" Grid.Row="0" Grid.RowSpan="2"/>
+                                    <Path x:Name="PathArrowDown" Style="{StaticResource ArrowDownStyle}" Grid.Row="0" Grid.RowSpan="2"/>
                                     <ContentPresenter Grid.Row="1" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
 			                                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 				                                                   SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
-                                    <Button Style="{StaticResource hidingButton}" Grid.Row="0" Grid.RowSpan="2" Click="btFilter_Click" />
+                                    <Button Style="{StaticResource hidingButtonStyle}" Grid.Row="0" Grid.RowSpan="2" Click="btFilter_Click"/>
                                 </Grid>
                             </Border>
                             <Thumb x:Name="PART_RightHeaderGripper" HorizontalAlignment="Right" Width="2" BorderThickness="1" Cursor="SizeWE"
@@ -104,9 +142,9 @@
                                         <RowDefinition Height="80*"/>
                                     </Grid.RowDefinitions>
 
-                                    <Path x:Name="PathArrowUp" Style="{StaticResource ArrowUp}" Grid.Row="0" Grid.RowSpan="2"/>
-                                    <Path x:Name="PathArrowDown" Style="{StaticResource ArrowDown}" Grid.Row="0" Grid.RowSpan="2"/>
-                                    <Button Style="{StaticResource hidingButton}" Grid.Row="0" Grid.RowSpan="2" Click="btFilter_Click"/>
+                                    <Path x:Name="PathArrowUp" Style="{StaticResource ArrowUpStyle}" Grid.Row="0" Grid.RowSpan="2"/>
+                                    <Path x:Name="PathArrowDown" Style="{StaticResource ArrowDownStyle}" Grid.Row="0" Grid.RowSpan="2"/>
+                                    <Button Style="{StaticResource hidingButtonStyle}" Grid.Row="0" Grid.RowSpan="2" Click="btFilter_Click"/>
                                     <ContentPresenter Grid.Row="1" HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
 			                                                       VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
 				                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}" />
@@ -135,11 +173,21 @@
     </DataGrid.Resources>
 
     <DataGrid.ColumnHeaderStyle>
-        <Style BasedOn="{StaticResource DataGridColumnHeaderCustom}" TargetType="DataGridColumnHeader"/>
+        <Style BasedOn="{StaticResource DataGridColumnHeaderCustomStyle}" TargetType="DataGridColumnHeader"/>
     </DataGrid.ColumnHeaderStyle>
 
     <DataGrid.CellStyle>
-        <Style BasedOn="{StaticResource Body_Content_DataGrid_Centering}" TargetType="DataGridCell"/>
+        <Style BasedOn="{StaticResource ContentDataGridStyle}" TargetType="DataGridCell">
+            <Setter Property="Foreground" Value="Black"/>
+            <Setter Property="ContextMenu" Value="{StaticResource DataGridCellContextMenu}"/>
+
+            <Style.Triggers>
+                <Trigger Property="IsSelected" Value="True">
+                    <Setter Property="Background" Value="{StaticResource SelectedRow}"/>
+                    <Setter Property="BorderThickness" Value="0"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
     </DataGrid.CellStyle>
 
     <DataGrid.RowStyle>
@@ -154,6 +202,8 @@
             <Setter Property="AutoGenerateColumns" Value="False"/>
             <Setter Property="ColumnHeaderHeight" Value="40"/>
             <Setter Property="IsReadOnly" Value="True"/>
+            <Setter Property="SelectionMode" Value="Single"/>
+            <Setter Property="SelectionUnit" Value="CellOrRowHeader"/>
         </Style>
     </DataGrid.Style>
 </DataGrid>
