--- a/SCME.dbViewer/ForFilters/FiltersInput.xaml
+++ b/SCME.dbViewer/ForFilters/FiltersInput.xaml
@@ -6,9 +6,19 @@
         xmlns:local="clr-namespace:SCME.dbViewer.ForFilters"
         xmlns:customControl="clr-namespace:SCME.dbViewer.CustomControl"
         xmlns:res="clr-namespace:SCME.dbViewer.Properties"
-        mc:Ignorable="d" x:Name="MyPage"
-        Title="StringInput" Height="auto" Width="430" SizeToContent="Height"
-        WindowStyle="None" PreviewKeyDown="Window_PreviewKeyDown" ShowInTaskbar="False">
+        mc:Ignorable="d"
+        Title="StringInput" Height="auto" Width="430" SizeToContent="Height" Background="{StaticResource CustomBlue1}"
+        WindowStyle="None" ShowInTaskbar="False" ResizeMode="CanResizeWithGrip" AllowsTransparency="True" PreviewKeyDown="Window_PreviewKeyDown" MouseLeftButtonDown="Window_MouseLeftButtonDown">
+
+    <Window.Resources>
+        <Style x:Key="closeWindowPath" TargetType="Path">
+            <Setter Property="Data" Value="M 0 0 L 8 8 M 0 8 L 8 0"/>
+            <Setter Property="StrokeThickness" Value="1"/>
+            <Setter Property="Stroke" Value="Black"/>
+            <Setter Property="Stretch" Value="Uniform"/>
+            <Setter Property="HorizontalAlignment" Value="Right"/>
+        </Style>
+    </Window.Resources>
 
     <Grid>
         <Grid.RowDefinitions>
@@ -17,12 +27,29 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Button x:Name="btDeleteAllFilters" Grid.Row="0" Content="{x:Static res:Resources.DeleteAllFilters}" FontSize="10" Click="btDeleteAllFilters_Click" />
+        <Grid Grid.Row="0">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="auto"/>
+            </Grid.ColumnDefinitions>
+
+            <Button x:Name="btDeleteAllFilters" Grid.Column="0" Content="{x:Static res:Resources.DeleteAllFilters}" FontSize="11" Click="btDeleteAllFilters_Click"/>
+
+            <Button Grid.Column="1" MinWidth="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" Background="LightPink" IsCancel="True" Click="btCancel_Click" FontSize="10" Margin="5,0,0,0">
+                <Path Style="{StaticResource closeWindowPath}"/>
+
+                <Button.Resources>
+                    <Style TargetType="{x:Type Border}">
+                        <Setter Property="CornerRadius" Value="3"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
+        </Grid>
+
         <customControl:ListViewFilters x:Name="lvFilters" Grid.Row="1" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" ItemsSource="{Binding Filters}"/>
 
-        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Height="35" VerticalAlignment="Bottom">
-            <Button Content="Cancel" IsCancel="True" Click="btCancel_Click" FontSize="10" Margin="0,5" Padding="5"/>
-            <Button Content="OK" IsDefault="True" Click="btOK_Click" FontSize="10" Margin="5" Padding="5"/>
+        <StackPanel Grid.Row="2" Orientation="Horizontal" HorizontalAlignment="Right" Height="50" VerticalAlignment="Bottom">
+            <Button Content="OK" MinWidth="{Binding ActualHeight, RelativeSource={RelativeSource Self}}" IsDefault="True" Click="btOK_Click" FontSize="10" Margin="10"/>
         </StackPanel>
     </Grid>
 </Window>
