--- a/SCME.dbViewer/CustomControl/ListViewFilter.xaml
+++ b/SCME.dbViewer/CustomControl/ListViewFilter.xaml
@@ -15,7 +15,13 @@
             <Setter Property="Stretch" Value="Uniform"/>
             <Setter Property="HorizontalAlignment" Value="Right"/>
         </Style>
-        
+
+        <Style x:Key="labelTittleFilterName" TargetType="Label">
+            <Setter Property="Background" Value="{StaticResource CustomBlue1}"/>
+            <Setter Property="Content" Value="{Binding Path=tittlefieldName}"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+        </Style>
+
         <customControl:FilterDataTemplateDictionary x:Key="filterDataTemplateDictionary">
             <DataTemplate DataType="forFilters:FilterDescription" x:Key="stringFilterTemplate">
                 <Grid>
@@ -29,7 +35,7 @@
                             Click="btDeleteSelectedFilter_Click" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
                         <Path Style="{StaticResource delFilterPath}"/>
                     </Button>
-                    <Label Grid.Column="1" Content="{Binding Path=tittlefieldName}"/>
+                    <Label Grid.Column="1" Style="{StaticResource labelTittleFilterName}"/>
                     <ComboBox Grid.Column="2" IsReadOnly="True" IsEditable="True" Text="{Binding Path=comparison, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <ComboBoxItem Content="="/>
                         <ComboBoxItem Content="&lt;"/>
@@ -53,7 +59,7 @@
                             Click="btDeleteSelectedFilter_Click" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
                         <Path Style="{StaticResource delFilterPath}"/>
                     </Button>
-                    <Label Grid.Column="1" Content="{Binding Path=tittlefieldName}"/>
+                    <Label Grid.Column="1" Style="{StaticResource labelTittleFilterName}"/>
                     <ComboBox Grid.Column="2" IsReadOnly="True" IsEditable="True" Text="{Binding Path=comparison, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <ComboBoxItem Content="="/>
                         <ComboBoxItem Content="&lt;"/>
@@ -77,7 +83,7 @@
                             Click="btDeleteSelectedFilter_Click" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
                         <Path Style="{StaticResource delFilterPath}"/>
                     </Button>
-                    <Label Grid.Column="1" Content="{Binding Path=tittlefieldName}"/>
+                    <Label Grid.Column="1" Style="{StaticResource labelTittleFilterName}"/>
                     <ComboBox Grid.Column="2" IsReadOnly="True" IsEditable="True" Text="{Binding Path=comparison, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
                         <ComboBoxItem Content="="/>
                         <ComboBoxItem Content="&lt;"/>
@@ -89,6 +95,29 @@
                 </Grid>
             </DataTemplate>
 
+            <DataTemplate DataType="forFilters:FilterDescription" x:Key="doubleFilterTemplate">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="140"/>
+                        <ColumnDefinition Width="auto"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <Button x:Name="btDeleteSelectedFilter" Grid.Column="0" Height="27" Width="{Binding ElementName=btDeleteSelectedFilter, Path=ActualHeight}"
+                            Click="btDeleteSelectedFilter_Click" CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}">
+                        <Path Style="{StaticResource delFilterPath}"/>
+                    </Button>
+                    <Label Grid.Column="1" Style="{StaticResource labelTittleFilterName}"/>
+                    <ComboBox Grid.Column="2" IsReadOnly="True" IsEditable="True" VerticalContentAlignment="Center" Text="{Binding Path=comparison, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}">
+                        <ComboBoxItem Content="="/>
+                        <ComboBoxItem Content="&lt;"/>
+                        <ComboBoxItem Content=">"/>
+                        <ComboBoxItem Content="&lt;="/>
+                        <ComboBoxItem Content=">="/>
+                    </ComboBox>
+                    <TextBox Grid.Column="3" FontSize="14" VerticalContentAlignment="Center" Text="{Binding Path=value, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+                </Grid>
+            </DataTemplate>
         </customControl:FilterDataTemplateDictionary>
     </ListView.Resources>
 
@@ -96,7 +125,7 @@
         <Style TargetType="ListViewItem">
             <Setter Property="HorizontalContentAlignment" Value="Stretch" />
             <Setter Property="Focusable" Value="false"/>
-            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Background" Value="Transparent"/>
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type ListViewItem}">
@@ -108,8 +137,6 @@
     </ListView.ItemContainerStyle>
 
     <ListView.ItemTemplateSelector>
-        <customControl:TemplateSelectorExt TemplateDictionary="{StaticResource filterDataTemplateDictionary}">
-
-        </customControl:TemplateSelectorExt>
+        <customControl:TemplateSelectorExt TemplateDictionary="{StaticResource filterDataTemplateDictionary}"/>
     </ListView.ItemTemplateSelector>
 </ListView>
