--- a/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
+++ b/SCME.WpfControlLibrary/Pages/ProfilesPage.xaml
@@ -74,6 +74,10 @@
                 <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
 
+            <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2V}}" Background="White">
+                <TextBlock Text="{Binding SelectedProfileNameCopy}" HorizontalAlignment="Center"> </TextBlock>
+            </Grid>
+            
             <Grid Grid.Column="0" Grid.Row="0" Visibility="{Binding ReadOnlyMode, Converter={StaticResource B2VI}}" Background="White">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -113,10 +117,12 @@
                         <ColumnDefinition Width="1*"/>
                     </Grid.ColumnDefinitions>
                     <Grid.RowDefinitions>
+                        <RowDefinition Height="auto"/>
                         <RowDefinition Height="auto" />
                         <RowDefinition Height="*" />
                     </Grid.RowDefinitions>
-                    <StackPanel Grid.Column="1" Grid.Row="0"  HorizontalAlignment="Center"  Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}">
+                    
+                    <StackPanel Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center"  Visibility="{Binding IsClampingCommutationActive, Converter={StaticResource B2V}}">
                         <Border IsEnabled="{Binding IsEditModeActive}" BorderThickness="1" BorderBrush="AliceBlue"
                                     Margin="10">
                             <profilesPageComponents:AddTestParameterUserControl Background="{StaticResource ListViewTestParametersBrush}"
@@ -134,7 +140,7 @@
                         </Border>
                     </StackPanel>
 
-                    <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="1" Grid.Row="1" HorizontalAlignment="Center" 
+                    <profilesPageComponents:ListViewTestParametersUserControl Grid.Column="1" Grid.Row="2" HorizontalAlignment="Center" 
                             ContentIsEnabled="{Binding IsEditModeActive}"
                             ItemSource="{Binding ProfileDeepDataCopy.TestParametersAndNormatives}"
                             PreviewMouseWheel="TestParametersListView_OnPreviewMouseWheel"
