Load config for UI, SQLResultsServiceServer, BF 31

--- a/SCME.UI/PagesTech/PasswordPage.xaml
+++ b/SCME.UI/PagesTech/PasswordPage.xaml
@@ -5,7 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:res="clr-namespace:SCME.UI.Properties"
       xmlns:customControl="clr-namespace:SCME.UI.CustomControl"
-      xmlns:customControls="WpfControlLibrary"
+      xmlns:customControls="WpfControlLibrary" Loaded="PasswordPage_OnLoaded"
       mc:Ignorable="d" d:DesignWidth="1280" d:DesignHeight="924"
       Title="" Background="Transparent">
     
