--- a/SCME.WpfControlLibrary/DataTemplates/TestParameters/UdsmUrsmDataTemplate.xaml
+++ b/SCME.WpfControlLibrary/DataTemplates/TestParameters/UdsmUrsmDataTemplate.xaml
@@ -57,9 +57,9 @@
         <ComboBox Grid.Column="1" Grid.Row="4" ItemsSource="{Binding Source={StaticResource FrequencyDivisors}}" DisplayMemberPath="Key" SelectedValuePath="Value" SelectedValue="{Binding UdsmUrsmFrequencyDivisor}" />
 
         <Label Grid.Column="0" Grid.Row="5" Content="{x:Static res:Resources.MaxIdrm_mA}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource IdrmUdsmUrsm2V}}" />
-        <customControls:NumericUpDown Grid.Column="1" Grid.Row="5" Value="{Binding UdsmUrsmIDRM}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource IdrmUdsmUrsm2V}}" StringFormat="{}{0:N0}"/>
+        <customControls:NumericUpDown Grid.Column="1" Grid.Row="5" Value="{Binding IDRM}" Visibility="{Binding UdsmUrsmTestType, Converter={StaticResource IdrmUdsmUrsm2V}}" StringFormat="{}{0:N0}"/>
 
 
         <Label Grid.Column="3" Grid.Row="5" Content="{x:Static res:Resources.MaxIrrm_mA}" />
-        <customControls:NumericUpDown Grid.Column="4" Grid.Row="5" Value="{Binding UdsmUrsmIRRM}" StringFormat="{}{0:N0}"/>
+        <customControls:NumericUpDown Grid.Column="4" Grid.Row="5" Value="{Binding IRRM}" StringFormat="{}{0:N0}"/>
 </Grid>
