--- a/SCME.WpfControlLibrary/Styles/ListView.xaml
+++ b/SCME.WpfControlLibrary/Styles/ListView.xaml
@@ -1,6 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls">
+                    xmlns:customControls="clr-namespace:SCME.WpfControlLibrary.CustomControls" xmlns:sys="clr-namespace:System;assembly=System.Runtime">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ScrollBar.xaml" />
     </ResourceDictionary.MergedDictionaries>
@@ -42,30 +42,118 @@
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}"
                             Background="{TemplateBinding Background}">
-                        <ScrollViewer Focusable="False" x:Name="ScrollViewer" Style="{StaticResource DefaultScrollViewer}"
+                        <Border.Resources>
+                            <ResourceDictionary>
+                                <GridLength x:Key="ListBoxScrollWidth">50</GridLength>
+
+                                <Style x:Key="ScrollBarThumb" TargetType="{x:Type Thumb}">
+                                    <Setter Property="OverridesDefaultStyle" Value="True" />
+                                    <Setter Property="Background" Value="Red" />
+                                    <Setter Property="IsTabStop" Value="False" />
+                                    <Setter Property="Focusable" Value="False" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type Thumb}">
+                                                <Grid>
+                                                    <Border Background="{TemplateBinding Background}" CornerRadius="2" />
+                                                </Grid>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+
+                                <Style x:Key="ScrollBarLineButton" TargetType="{x:Type RepeatButton}">
+                                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                                    <Setter Property="Focusable" Value="false" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type RepeatButton}">
+                                                <Grid Name="border">
+                                                    <Border Background="{StaticResource PurpleBrush1}" Width="{TemplateBinding Width}"
+                                    Height="{TemplateBinding Width}" CornerRadius="2">
+                                                        <Path Name="path" Stretch="Uniform" Margin="5"
+                                      Stroke="White" StrokeThickness="6"
+                                      Data="{Binding RelativeSource={RelativeSource TemplatedParent}, Path=Content}" />
+                                                    </Border>
+                                                </Grid>
+                                                <ControlTemplate.Triggers>
+                                                    <Trigger Property="IsPressed" Value="True">
+                                                        <Setter TargetName="border" Property="Background" Value="{StaticResource PurpleBrush1}" />
+                                                        <Setter TargetName="path" Property="Margin" Value="2" />
+                                                    </Trigger>
+                                                </ControlTemplate.Triggers>
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+
+                                <Style x:Key="ScrollBarPageButton" TargetType="{x:Type RepeatButton}">
+                                    <Setter Property="OverridesDefaultStyle" Value="true" />
+                                    <Setter Property="IsTabStop" Value="false" />
+                                    <Setter Property="Focusable" Value="false" />
+                                    <Setter Property="Template">
+                                        <Setter.Value>
+                                            <ControlTemplate TargetType="{x:Type RepeatButton}">
+                                                <Border Background="Transparent" />
+                                            </ControlTemplate>
+                                        </Setter.Value>
+                                    </Setter>
+                                </Style>
+
+                                <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
+                                    <Grid Background="White">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="{StaticResource ListBoxScrollWidth}" />
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition Height="Auto" />
+                                            <RowDefinition Height="*" />
+                                            <RowDefinition Height="Auto" />
+                                        </Grid.RowDefinitions>
+                                        <RepeatButton Grid.Row="0" Command="ScrollBar.LineUpCommand"
+                                                          Content="M 0 1 L 1 0 L 2 1"
+                                                          Margin="0,0,0,1" Style="{StaticResource ScrollBarLineButton}"
+                                                          Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}"/>
+                                        <Track Grid.Row="1" Name="PART_Track" IsDirectionReversed="true">
+                                            <Track.DecreaseRepeatButton>
+                                                <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                                                                  Command="ScrollBar.PageUpCommand" />
+                                            </Track.DecreaseRepeatButton>
+                                            <Track.Thumb>
+                                                <Thumb Background="{StaticResource PurpleBrush1}"
+                                                           Style="{StaticResource ScrollBarThumb}" />
+                                            </Track.Thumb>
+                                            <Track.IncreaseRepeatButton>
+                                                <RepeatButton Style="{StaticResource ScrollBarPageButton}"
+                                                                  Command="ScrollBar.PageDownCommand" />
+                                            </Track.IncreaseRepeatButton>
+                                        </Track>
+                                        <RepeatButton Grid.Row="2" Command="ScrollBar.LineDownCommand"
+                                                          Content="M 0 0 L 1 1 L 2 0"
+                                                          Margin="0,1,0,0" Style="{StaticResource ScrollBarLineButton}"
+                                                          Height="{Binding Source={StaticResource ListBoxScrollWidth}, Converter={StaticResource G2L}}" />
+                                    </Grid>
+                                </ControlTemplate>
+
+                                <Style TargetType="{x:Type ScrollBar}">
+                                    <Setter Property="Template" Value="{StaticResource VerticalScrollBar}"/>
+                                </Style>
+
+                            </ResourceDictionary>
+                        </Border.Resources>
+                        <ScrollViewer Focusable="False" HorizontalScrollBarVisibility="Hidden"
                                       Padding="{TemplateBinding Padding}"
                                       Background="{TemplateBinding Background}">
-                            <Grid x:Name="Grid">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="0" x:Name="ColumnDefinition"/>
-                                </Grid.ColumnDefinitions>
-                                <ItemsPresenter />
-                            </Grid>
+                            <ScrollViewer.Resources>
+                                <sys:Double x:Key="{x:Static SystemParameters.VerticalScrollBarWidthKey}">50</sys:Double>
+                            </ScrollViewer.Resources>
+                            <ItemsPresenter />
                         </ScrollViewer>
                     </Border>
-                    <ControlTemplate.Triggers>
-                        <DataTrigger Binding="{Binding ElementName=ScrollViewer, Path=ComputedVerticalScrollBarVisibility}" Value="True">
-                            <Setter TargetName="ColumnDefinition" Property="Width" Value="60"></Setter>
-                        </DataTrigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="border" Property="Opacity" Value="0.4" />
-                        </Trigger>
-                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
- 
+
 </ResourceDictionary>
