--- a/SCME.UI/PagesTech/GatePage.xaml
+++ b/SCME.UI/PagesTech/GatePage.xaml
@@ -221,6 +221,11 @@
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
                         <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
                     <CheckBox Grid.Column="1" Grid.Row="1" Grid.ColumnSpan="2"
@@ -304,10 +309,32 @@
                        Visibility="{Binding ElementName=CbIsIlEnabled,Path=IsChecked, Converter={StaticResource B2V}}"
                        Margin="0,0,0,1" />
 
+                    <Label Grid.Column="1" Grid.Row="18" Margin="10"  Content="Nominal current, mA" />
+                    <Label Grid.Column="1" Grid.Row="19" Margin="10" Content="Actual current, mA" />
+                    <Label Grid.Column="1" Grid.Row="20" Margin="10" Content="Actual voltage, mV" />
+                    
+                    <customControls:ValidatingTextBox Grid.Column="2" Grid.Row="18" Margin="10,5"
+                                                      x:Name="calibrationCurrent" x:FieldModifier="private"
+                                                      TextBlock.TextAlignment="Right" Maximum="65535" Minimum="0"
+                                                      IsNumeric="True" />
+                    <Label Grid.Column="2" Grid.Row="19" Margin="10" Content="0" x:Name="actualCurrent"
+                           x:FieldModifier="private" />
+                    <Label Grid.Column="2" Grid.Row="20" Margin="10" Content="0" x:Name="actualVoltage"
+                           x:FieldModifier="private" />
+
+                  
+                    
+                    <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="21" Margin="10" Content="Pulse gate" Click="Pulse_Gate_Click"
+                            Background="#FFD68A56" />
+                    <Button Grid.Column="1" Grid.ColumnSpan="2" Grid.Row="22" Margin="10" Content="Pulse main" Click="Pulse_Main_Click"
+                            Background="#FFD68A56" />
+
+ 
+                    
                     <Label Name="lblFault" x:FieldModifier="private" Background="Tomato" Height="Auto" Padding="10"
-                       Grid.Column="1" Grid.Row="18" Grid.ColumnSpan="2" Content="Fault" />
+                       Grid.Column="1" Grid.Row="23" Grid.ColumnSpan="2" Content="Fault" />
                     <Label Name="lblWarning" x:FieldModifier="private" Background="Gold" Height="Auto" Padding="10"
-                       Grid.Column="1" Grid.Row="19" Grid.ColumnSpan="2" Content="Warning" />
+                       Grid.Column="1" Grid.Row="24" Grid.ColumnSpan="2" Content="Warning" />
 
                 </Grid>
             </Border>
