--- a/SCME.UI/CustomControl/ListViewResults.xaml
+++ b/SCME.UI/CustomControl/ListViewResults.xaml
@@ -170,9 +170,9 @@
                         <RowDefinition Height="Auto" />
                     </Grid.RowDefinitions>
 
-                    <customControls:LabelWithIndex Content="{x:Static res:Resources.VdrmV}" Grid.Column="0" Grid.Row="0"
+                    <customControls:LabelWithIndex Name="labelWithIndexBvtVdrmVResult1"  Grid.Column="0" Grid.Row="0"
                                                    Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}"
-                                                   Grid.ColumnSpan="2" Margin="10,2,0,1" />
+                                                   Grid.ColumnSpan="2"  />
                     <Label Name="labelBvtVdrmResult1"  Grid.Column="1" Grid.Row="0" Content="0"
                        HorizontalContentAlignment="Right" FontSize="{StaticResource FontSize30}"
                        Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}"
@@ -186,7 +186,7 @@
                        Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=1}"
                        />
 
-                    <customControls:LabelWithIndex Content="{x:Static res:Resources.VrrmV}" Grid.Column="0" Grid.Row="2"
+                    <customControls:LabelWithIndex Name="labelWithIndexBvtVrrmVResult1"   Grid.Column="0" Grid.Row="2"
                                                    Visibility="{Binding TestType, Converter={StaticResource TT2V}, ConverterParameter=2}"
                                                    Grid.ColumnSpan="2" />
                     <Label Name="labelBvtVrrmResult1"  Grid.Column="1" Grid.Row="2" Content="0"
